Finished porting OSX to JRE8
Still not usable version though.